--- a/about.html
+++ b/about.html
@@ -93,35 +93,40 @@
                 <div class="w-15 h-[2px] md:h-[3px] lg:w-20 lg:h-1 bg-[var(--secondary-color)]"></div>
             </div>
 
-            <div class="flex flex-col md:flex-row md:space-x-8">
-                <div class="md:w-1/2 mb-10 md:mb-0">
-                    <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/429a24d8-8f3f-4da9-8d25-3f04fc6c7f59.png"
-                        alt="Startup office in early days with small team working on laptops"
-                        class="rounded-lg shadow-lg w-full">
+            <div class="flex flex-col md:flex-col lg:flex-row md:space-y-8">
+                <div class="md:w-full lg:w-1/2 mb-10 md:mb-0 h-1/2">
+                    <img src="images/travel.jpg" alt="Startup office in early days with small team working on laptops"
+                        class="rounded-lg w-full md:h-auto object-cover">
                 </div>
-                <div class="md:w-1/2">
-                    <p class="text-gray-600 mb-6 leading-relaxed">
-                        It all began in a small garage with just three people who shared a common vision - to create
-                        technology that makes a real difference. Today, we've grown to a team of over 200 professionals
-                        across three continents.
+                <div class="md:w-full lg:w-1/2 h-1/2">
+                    <p class="text-sm md:text-base text-gray-600 mb-6 leading-relaxed">
+                        Welcome to <strong class="text-[var(--primary-color)]">Ajik Bali Travel!</strong> We are a travel agent dedicated to providing a comfortable, safe,
+                        and enjoyable travel experience for every guest. With our experienced team, we are ready to be
+                        your trusted partner in exploring various destinations of your choice.
                     </p>
-                    <p class="text-gray-600 mb-6 leading-relaxed">
-                        Our journey hasn't been without challenges, but each obstacle has only made us stronger and more
-                        determined. We've always believed that the best solutions come from collaboration, creativity,
-                        and a deep understanding of our clients' needs.
+                    <p class="text-sm md:text-base text-gray-600 mb-6 leading-relaxed">
+                        We understand that every journey has its own story and unique needs. That’s why we offer full
+                        flexibility for guests to choose their favorite travel destinations. Our job is to ensure you
+                        reach your destination comfortably, on time, and without any hassle. From pick-up to drop-off,
+                        we are committed to delivering the best service for your trip.
+                    </p>
+                    <p class="text-sm md:text-base text-gray-600 mb-6 leading-relaxed">
+                        Booking your trip with us is easy and fast. Simply contact us via WhatsApp, and our team will
+                        immediately assist you in arranging your travel schedule just the way you want it. No queues, no
+                        complications — just one click, and your journey begins with us.
                     </p>
                     <div class="flex justify-between text-center mt-10">
                         <div>
-                            <div class="text-3xl font-bold text-blue-600">8+</div>
-                            <div class="text-gray-500">Years Experience</div>
+                            <div class="text-2xl md:text-3xl font-bold text-[var(--primary-color)]">8+</div>
+                            <div class="text-sm md:text-base text-gray-500">Years Experience</div>
                         </div>
                         <div>
-                            <div class="text-3xl font-bold text-blue-600">200+</div>
-                            <div class="text-gray-500">Team Members</div>
+                            <div class="text-2xl md:text-3xl font-bold text-[var(--primary-color)]">900+</div>
+                            <div class="text-sm md:text-base text-gray-500">Destinations Served</div>
                         </div>
                         <div>
-                            <div class="text-3xl font-bold text-blue-600">500+</div>
-                            <div class="text-gray-500">Satisfied Clients</div>
+                            <div class="text-2xl md:text-3xl font-bold text-[var(--primary-color)]">1000+</div>
+                            <div class="text-sm md:text-base text-gray-500">Satisfied Clients</div>
                         </div>
                     </div>
                 </div>
@@ -130,15 +135,15 @@
     </section>
 
     <!-- Our Team -->
-    <section class="mt-22 md:mt-30 lg:mt-25">
+    <section class="mt-22 md:mt-22 lg:mt-25">
         <div class="px-5 md:px-10 lg:px-15 xl:px-15 2xl:px-15">
             <div class="text-center mb-16">
-                <h2 class="text-3xl font-semibold mb-4">Meet Our Team</h2>
+                <h2 class="text-3xl font-semibold mb-4">Key person</h2>
                 <div class="w-15 h-[2px] md:h-[3px] lg:w-20 lg:h-1 bg-[var(--secondary-color)] mx-auto"></div>
                 <p class="text-gray-600 max-w-2xl mx-auto mt-4">The brilliant minds behind our success</p>
             </div>
 
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-8 mx-auto w-full">
                 <!-- Team Member 1 -->
                 <div
                     class="bg-white rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition duration-300 transform hover:-translate-y-2">
@@ -202,70 +207,7 @@
                         </div>
                     </div>
                 </div>
-
-                <!-- Team Member 3 -->
-                <div
-                    class="bg-white rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition duration-300 transform hover:-translate-y-2">
-                    <div class="h-64 overflow-hidden">
-                        <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/e4ea3e78-ec7c-4398-a421-0c99511711e7.png"
-                            alt="Smiling female marketing director in creative workspace with colorful graphics"
-                            class="w-full h-full object-cover">
-                    </div>
-                    <div class="p-6">
-                        <h3 class="text-xl font-semibold mb-1">Emma Rodriguez</h3>
-                        <p class="text-blue-600 mb-4">Marketing Director</p>
-                        <p class="text-gray-600 text-sm">Creative strategist with a passion for storytelling. Lover of
-                            street art.</p>
-                        <div class="flex mt-4 space-x-3">
-                            <a href="#" class="text-blue-500 hover:text-blue-700">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="currentColor"
-                                    viewBox="0 0 24 24">
-                                    <path
-                                        d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z" />
-                                </svg>
-                            </a>
-                            <a href="#" class="text-blue-400 hover:text-blue-600">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="currentColor"
-                                    viewBox="0 0 24 24">
-                                    <path
-                                        d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z" />
-                                </svg>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Team Member 4 -->
-                <div
-                    class="bg-white rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition duration-300 transform hover:-translate-y-2">
-                    <div class="h-64 overflow-hidden">
-                        <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/94236758-9a57-40a7-999a-676e19efe51c.png"
-                            alt="Young male lead developer working on multiple screens with code in office"
-                            class="w-full h-full object-cover">
-                    </div>
-                    <div class="p-6">
-                        <h3 class="text-xl font-semibold mb-1">David Kim</h3>
-                        <p class="text-blue-600 mb-4">Lead Developer</p>
-                        <p class="text-gray-600 text-sm">Full-stack expert who thrives on complex problems. Weekend
-                            mountain biker.</p>
-                        <div class="flex mt-4 space-x-3">
-                            <a href="#" class="text-blue-500 hover:text-blue-700">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="currentColor"
-                                    viewBox="0 0 24 24">
-                                    <path
-                                        d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z" />
-                                </svg>
-                            </a>
-                            <a href="#" class="text-blue-400 hover:text-blue-600">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="currentColor"
-                                    viewBox="0 0 24 24">
-                                    <path
-                                        d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z" />
-                                </svg>
-                            </a>
-                        </div>
-                    </div>
-                </div>
+                
             </div>
         </div>
     </section>
