--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
                                     href="contact.html">Contact&nbsp;Us</a></li>
                             <li class="px-[10px] py-[6px] lg:text-sm inactive"><a
                                     href="destinations.html">Destinations</a></li>
-                            <li class="px-[10px] py-[6px] lg:text-sm inactive"><a href="help.html">Help</a></li>
+                            <li class="px-[10px] py-[6px] lg:text-sm inactive"><a href="faq.html">FAQ</a></li>
                             <li class="px-[10px] py-[6px] lg:text-sm inactive"><a href="#">Lang</a></li>
                         </ul>
                     </div>
@@ -78,7 +78,7 @@
                     <li><a href="about.html" class="block text-gray-700 active">About Us</a></li>
                     <li><a href="contact.html" class="block text-gray-700">Contact Us</a></li>
                     <li><a href="destinations.html" class="block text-gray-700">Destinations</a></li>
-                    <li><a href="help.html" class="block text-gray-700">Help</a></li>
+                    <li><a href="faq.html" class="block text-gray-700">FAQ</a></li>
                     <li><a href="#" class="block text-gray-700">Lang</a></li>
                 </ul>
             </div>
@@ -117,19 +117,22 @@
                         complications — just one click, and your journey begins with us.
                     </p>
                     <div class="flex justify-between text-center mt-10">
-    <div>
-        <div class="counter text-2xl md:text-3xl font-bold text-[var(--primary-color)]" data-target="8">0</div>
-        <div class="text-sm md:text-base text-gray-500">Years Experience</div>
-    </div>
-    <div>
-        <div class="counter text-2xl md:text-3xl font-bold text-[var(--primary-color)]" data-target="900">0</div>
-        <div class="text-sm md:text-base text-gray-500">Destinations Served</div>
-    </div>
-    <div>
-        <div class="counter text-2xl md:text-3xl font-bold text-[var(--primary-color)]" data-target="1000">0</div>
-        <div class="text-sm md:text-base text-gray-500">Satisfied Clients</div>
-    </div>
-</div>
+                        <div>
+                            <div class="counter text-2xl md:text-3xl font-bold text-[var(--primary-color)]"
+                                data-target="8">0</div>
+                            <div class="text-sm md:text-base text-gray-500">Years Experience</div>
+                        </div>
+                        <div>
+                            <div class="counter text-2xl md:text-3xl font-bold text-[var(--primary-color)]"
+                                data-target="900">0</div>
+                            <div class="text-sm md:text-base text-gray-500">Destinations Served</div>
+                        </div>
+                        <div>
+                            <div class="counter text-2xl md:text-3xl font-bold text-[var(--primary-color)]"
+                                data-target="1000">0</div>
+                            <div class="text-sm md:text-base text-gray-500">Satisfied Clients</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -148,29 +151,23 @@
                 <!-- Team Member 1 -->
                 <div
                     class="bg-white rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition duration-300 transform hover:-translate-y-2">
-                    <div class="h-64 overflow-hidden">
+                    <div class="h-64 lg:h-90 overflow-hidden">
                         <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/9506dcc1-4ea9-4823-90e6-e2db21cb3358.png"
                             alt="Confident female CEO in business attire standing in modern office with city view"
                             class="w-full h-full object-cover">
                     </div>
                     <div class="p-6">
-                        <h3 class="text-xl font-semibold mb-1">Sarah Johnson</h3>
+                        <h3 class="text-xl font-semibold mb-1">Person 1</h3>
                         <p class="text-blue-600 mb-4">CEO & Founder</p>
                         <p class="text-gray-600 text-sm">Visionary leader with 15+ years in tech industry. Loves hiking
                             and robotics.</p>
                         <div class="flex mt-4 space-x-3">
-                            <a href="#" class="text-blue-500 hover:text-blue-700">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="currentColor"
-                                    viewBox="0 0 24 24">
-                                    <path
-                                        d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z" />
-                                </svg>
-                            </a>
-                            <a href="#" class="text-blue-400 hover:text-blue-600">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="currentColor"
-                                    viewBox="0 0 24 24">
-                                    <path
-                                        d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z" />
+                            <a href="#">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256" class="h-6 w-6">
+                                    <path fill="#1877f2"
+                                        d="M256 128C256 57.308 198.692 0 128 0S0 57.308 0 128c0 63.888 46.808 116.843 108 126.445V165H75.5v-37H108V99.8c0-32.08 19.11-49.8 48.348-49.8C170.352 50 185 52.5 185 52.5V84h-16.14C152.959 84 148 93.867 148 103.99V128h35.5l-5.675 37H148v89.445c61.192-9.602 108-62.556 108-126.445" />
+                                    <path fill="#fff"
+                                        d="m177.825 165l5.675-37H148v-24.01C148 93.866 152.959 84 168.86 84H185V52.5S170.352 50 156.347 50C127.11 50 108 67.72 108 99.8V128H75.5v37H108v89.445A129 129 0 0 0 128 256a129 129 0 0 0 20-1.555V165z" />
                                 </svg>
                             </a>
                         </div>
@@ -180,29 +177,50 @@
                 <!-- Team Member 2 -->
                 <div
                     class="bg-white rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition duration-300 transform hover:-translate-y-2">
-                    <div class="h-64 overflow-hidden">
+                    <div class="h-64 lg:h-90 overflow-hidden">
                         <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/583b72f4-833d-4983-9581-ec99f8b977cc.png"
                             alt="Male CTO wearing glasses presenting tech concepts on digital screen"
                             class="w-full h-full object-cover">
                     </div>
                     <div class="p-6">
-                        <h3 class="text-xl font-semibold mb-1">Michael Chen</h3>
+                        <h3 class="text-xl font-semibold mb-1">Person 2</h3>
                         <p class="text-blue-600 mb-4">CTO</p>
                         <p class="text-gray-600 text-sm">Tech wizard with expertise in AI and cloud computing. Amateur
                             photographer.</p>
                         <div class="flex mt-4 space-x-3">
-                            <a href="#" class="text-blue-500 hover:text-blue-700">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="currentColor"
-                                    viewBox="0 0 24 24">
-                                    <path
-                                        d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z" />
+                            <a href="#">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256" class="h-6 w-6">
+                                    <path fill="#1877f2"
+                                        d="M256 128C256 57.308 198.692 0 128 0S0 57.308 0 128c0 63.888 46.808 116.843 108 126.445V165H75.5v-37H108V99.8c0-32.08 19.11-49.8 48.348-49.8C170.352 50 185 52.5 185 52.5V84h-16.14C152.959 84 148 93.867 148 103.99V128h35.5l-5.675 37H148v89.445c61.192-9.602 108-62.556 108-126.445" />
+                                    <path fill="#fff"
+                                        d="m177.825 165l5.675-37H148v-24.01C148 93.866 152.959 84 168.86 84H185V52.5S170.352 50 156.347 50C127.11 50 108 67.72 108 99.8V128H75.5v37H108v89.445A129 129 0 0 0 128 256a129 129 0 0 0 20-1.555V165z" />
                                 </svg>
                             </a>
                             <a href="#" class="text-blue-400 hover:text-blue-600">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="currentColor"
-                                    viewBox="0 0 24 24">
-                                    <path
-                                        d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z" />
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 256 256">
+                                    <g fill="none">
+                                        <rect width="256" height="256" fill="url(#skillIconsInstagram0)" rx="60" />
+                                        <rect width="256" height="256" fill="url(#skillIconsInstagram1)" rx="60" />
+                                        <path fill="#fff"
+                                            d="M128.009 28c-27.158 0-30.567.119-41.233.604c-10.646.488-17.913 2.173-24.271 4.646c-6.578 2.554-12.157 5.971-17.715 11.531c-5.563 5.559-8.98 11.138-11.542 17.713c-2.48 6.36-4.167 13.63-4.646 24.271c-.477 10.667-.602 14.077-.602 41.236s.12 30.557.604 41.223c.49 10.646 2.175 17.913 4.646 24.271c2.556 6.578 5.973 12.157 11.533 17.715c5.557 5.563 11.136 8.988 17.709 11.542c6.363 2.473 13.631 4.158 24.275 4.646c10.667.485 14.073.604 41.23.604c27.161 0 30.559-.119 41.225-.604c10.646-.488 17.921-2.173 24.284-4.646c6.575-2.554 12.146-5.979 17.702-11.542c5.563-5.558 8.979-11.137 11.542-17.712c2.458-6.361 4.146-13.63 4.646-24.272c.479-10.666.604-14.066.604-41.225s-.125-30.567-.604-41.234c-.5-10.646-2.188-17.912-4.646-24.27c-2.563-6.578-5.979-12.157-11.542-17.716c-5.562-5.562-11.125-8.979-17.708-11.53c-6.375-2.474-13.646-4.16-24.292-4.647c-10.667-.485-14.063-.604-41.23-.604zm-8.971 18.021c2.663-.004 5.634 0 8.971 0c26.701 0 29.865.096 40.409.575c9.75.446 15.042 2.075 18.567 3.444c4.667 1.812 7.994 3.979 11.492 7.48c3.5 3.5 5.666 6.833 7.483 11.5c1.369 3.52 3 8.812 3.444 18.562c.479 10.542.583 13.708.583 40.396s-.104 29.855-.583 40.396c-.446 9.75-2.075 15.042-3.444 18.563c-1.812 4.667-3.983 7.99-7.483 11.488c-3.5 3.5-6.823 5.666-11.492 7.479c-3.521 1.375-8.817 3-18.567 3.446c-10.542.479-13.708.583-40.409.583c-26.702 0-29.867-.104-40.408-.583c-9.75-.45-15.042-2.079-18.57-3.448c-4.666-1.813-8-3.979-11.5-7.479s-5.666-6.825-7.483-11.494c-1.369-3.521-3-8.813-3.444-18.563c-.479-10.542-.575-13.708-.575-40.413s.096-29.854.575-40.396c.446-9.75 2.075-15.042 3.444-18.567c1.813-4.667 3.983-8 7.484-11.5s6.833-5.667 11.5-7.483c3.525-1.375 8.819-3 18.569-3.448c9.225-.417 12.8-.542 31.437-.563zm62.351 16.604c-6.625 0-12 5.37-12 11.996c0 6.625 5.375 12 12 12s12-5.375 12-12s-5.375-12-12-12zm-53.38 14.021c-28.36 0-51.354 22.994-51.354 51.355s22.994 51.344 51.354 51.344c28.361 0 51.347-22.983 51.347-51.344c0-28.36-22.988-51.355-51.349-51.355zm0 18.021c18.409 0 33.334 14.923 33.334 33.334c0 18.409-14.925 33.334-33.334 33.334s-33.333-14.925-33.333-33.334c0-18.411 14.923-33.334 33.333-33.334" />
+                                        <defs>
+                                            <radialGradient id="skillIconsInstagram0" cx="0" cy="0" r="1"
+                                                gradientTransform="matrix(0 -253.715 235.975 0 68 275.717)"
+                                                gradientUnits="userSpaceOnUse">
+                                                <stop stop-color="#fd5" />
+                                                <stop offset=".1" stop-color="#fd5" />
+                                                <stop offset=".5" stop-color="#ff543e" />
+                                                <stop offset="1" stop-color="#c837ab" />
+                                            </radialGradient>
+                                            <radialGradient id="skillIconsInstagram1" cx="0" cy="0" r="1"
+                                                gradientTransform="matrix(22.25952 111.2061 -458.39518 91.75449 -42.881 18.441)"
+                                                gradientUnits="userSpaceOnUse">
+                                                <stop stop-color="#3771c8" />
+                                                <stop offset=".128" stop-color="#3771c8" />
+                                                <stop offset="1" stop-color="#60f" stop-opacity="0" />
+                                            </radialGradient>
+                                        </defs>
+                                    </g>
                                 </svg>
                             </a>
                         </div>
@@ -223,21 +241,21 @@
                 <div class="sections">
                     <h2 class="font-semibold text-xl">Pages</h1>
                         <div class="items flex flex-col gap-2 mt-2">
-                            <p
+                            <a href="index.html"
                                 class="text-gray-700 transition-all duration-300 ease-in-out hover:translate-x-2 transition-transform cursor-pointer">
-                                Home</p>
-                            <p
+                                Home</a>
+                            <a href="contact.html"
                                 class="text-gray-700 transition-all duration-300 ease-in-out hover:translate-x-2 transition-transform cursor-pointer">
-                                Contact Us</p>
-                            <p
+                                Contact Us</a>
+                            <a href="about.html"
                                 class="text-gray-700 transition-all duration-300 ease-in-out hover:translate-x-2 transition-transform cursor-pointer">
-                                About Us</p>
-                            <p
+                                About Us</a>
+                            <a href="destinations.html"
                                 class="text-gray-700 transition-all duration-300 ease-in-out hover:translate-x-2 transition-transform cursor-pointer">
-                                Destinations</p>
-                            <p
+                                Destinations</a>
+                            <a href="faq.html"
                                 class="text-gray-700 transition-all duration-300 ease-in-out hover:translate-x-2 transition-transform cursor-pointer">
-                                Help</p>
+                                Help</a>
                         </div>
                 </div>
                 <div class="sections w-auto">
@@ -260,43 +278,43 @@
     <script src="script.js"></script>
 
     <script>
-    const counters = document.querySelectorAll('.counter');
-    const duration = 2000; // durasi semua counter (ms)
+        const counters = document.querySelectorAll('.counter');
+        const duration = 2000; // durasi semua counter (ms)
 
-    const observer = new IntersectionObserver((entries, observer) => {
-        entries.forEach(entry => {
-            if (entry.isIntersecting) {
-                counters.forEach(counter => {
-                    const target = +counter.getAttribute('data-target');
-                    const start = 0;
-                    const startTime = performance.now();
+        const observer = new IntersectionObserver((entries, observer) => {
+            entries.forEach(entry => {
+                if (entry.isIntersecting) {
+                    counters.forEach(counter => {
+                        const target = +counter.getAttribute('data-target');
+                        const start = 0;
+                        const startTime = performance.now();
 
-                    const animate = (time) => {
-                        const elapsed = time - startTime;
-                        const progress = Math.min(elapsed / duration, 1);
-                        const value = Math.floor(progress * (target - start) + start);
+                        const animate = (time) => {
+                            const elapsed = time - startTime;
+                            const progress = Math.min(elapsed / duration, 1);
+                            const value = Math.floor(progress * (target - start) + start);
 
-                        counter.innerText = value;
+                            counter.innerText = value;
 
-                        if (progress < 1) {
-                            requestAnimationFrame(animate);
-                        } else {
-                            counter.innerText = target + '+';
-                        }
-                    };
+                            if (progress < 1) {
+                                requestAnimationFrame(animate);
+                            } else {
+                                counter.innerText = target + '+';
+                            }
+                        };
 
-                    requestAnimationFrame(animate);
-                });
+                        requestAnimationFrame(animate);
+                    });
 
-                observer.disconnect();
-            }
+                    observer.disconnect();
+                }
+            });
+        }, { threshold: 0.5 });
+
+        counters.forEach(counter => {
+            observer.observe(counter);
         });
-    }, { threshold: 0.5 });
-
-    counters.forEach(counter => {
-        observer.observe(counter);
-    });
-</script>
+    </script>
 </body>
 
 </html>
