--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
                             </li>
                             <li class="px-[10px] py-[6px] lg:text-sm inactive"><a
                                     href="destinations.html">Destinations</a></li>
-                            <li class="px-[10px] py-[6px] lg:text-sm inactive"><a href="help.html">Help</a></li>
+                            <li class="px-[10px] py-[6px] lg:text-sm inactive"><a href="faq.html">FAQ</a></li>
                             <li class="px-[10px] py-[6px] lg:text-sm inactive"><a href="#">Lang</a></li>
                         </ul>
                     </div>
@@ -83,7 +83,7 @@
                     <li><a href="about.html" class="block text-gray-700">About Us</a></li>
                     <li><a href="contact.html" class="block text-gray-700 active">Contact Us</a></li>
                     <li><a href="destinations.html" class="block text-gray-700">Destinations</a></li>
-                    <li><a href="help.html" class="block text-gray-700">Help</a></li>
+                    <li><a href="faq.html" class="block text-gray-700">FAQ</a></li>
                     <li><a href="#" class="block text-gray-700">Lang</a></li>
                 </ul>
             </div>
