--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <title>Ajik Bali Transport</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <!-- <script src="https://cdn.jsdelivr.net/gh/monsieurdd/mrD-SmoothScroller@latest/mrd-smoothscroller.js"></script> -->
     <link rel="stylesheet" href="styles.css">
@@ -59,11 +59,41 @@
                     <div class="nav-parent w-full ml-35">
                         <ul class="nav-list flex justify-between w-full">
                             <li class="px-[10px] py-[6px] lg:text-sm active"><a href="index.html">Home</a></li>
-                            <li class="px-[10px] py-[6px] lg:text-sm inactive"><a href="about.html">About&nbsp;Us</a></li>
-                            <li class="px-[10px] py-[6px] lg:text-sm inactive"><a href="contact.html">Contact&nbsp;Us</a></li>
-                            <li class="px-[10px] py-[6px] lg:text-sm inactive"><a href="destinations.html">Destinations</a></li>
+                            <li class="px-[10px] py-[6px] lg:text-sm inactive"><a href="about.html">About&nbsp;Us</a>
+                            </li>
+                            <li class="px-[10px] py-[6px] lg:text-sm inactive"><a
+                                    href="contact.html">Contact&nbsp;Us</a></li>
+                            <li class="px-[10px] py-[6px] lg:text-sm inactive"><a
+                                    href="destinations.html">Destinations</a></li>
                             <li class="px-[10px] py-[6px] lg:text-sm inactive"><a href="faq.html">FAQ</a></li>
-                            <li class="px-[10px] py-[6px] lg:text-sm inactive"><a href="#">Lang</a></li>
+                            <li class="px-[10px] py-[0px] inactive flex items-center justify-center">
+                                <div class="relative inline-block text-left lang-container">
+                                    <button class="lang-btn flex items-center justify-center gap-2">
+                                        <img class="selected-flag w-7 h-7" src="images/id.png" alt="ID">
+                                        <span class="iconify text-gray-500">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21"
+                                                viewBox="0 0 24 24">
+                                                <path fill="currentColor"
+                                                    d="M18.53 9.53a.75.75 0 0 0 0-1.06H5.47a.75.75 0 0 0 0 1.06l6 6a.75.75 0 0 0 1.06 0z" />
+                                            </svg>
+                                        </span>
+                                    </button>
+
+                                    <div
+                                        class="lang-menu hidden absolute right-0 mt-3 w-40 bg-white rounded-xl shadow-xl border border-gray-200 transform scale-95 opacity-0 transition-all origin-top-right">
+                                        <button data-lang="id"
+                                            class="lang-option w-full flex items-center gap-2 py-2 px-4 hover:bg-gray-100 rounded-t-xl">
+                                            <img src="images/id.png" alt="Indonesia" class="w-6 h-6">
+                                            <span class="text-sm text-gray-700">Indonesia</span>
+                                        </button>
+                                        <button data-lang="en"
+                                            class="lang-option w-full flex items-center gap-2 py-2 px-4 hover:bg-gray-100 rounded-b-xl">
+                                            <img src="images/uk.png" alt="English" class="w-6 h-6">
+                                            <span class="text-sm text-gray-700">English</span>
+                                        </button>
+                                    </div>
+                                </div>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -77,7 +107,33 @@
                     <li><a href="contact.html" class="block text-gray-700">Contact Us</a></li>
                     <li><a href="destinations.html" class="block text-gray-700">Destinations</a></li>
                     <li><a href="faq.html" class="block text-gray-700">FAQ</a></li>
-                    <li><a href="#" class="block text-gray-700">Lang</a></li>
+                    <li>
+                        <div class="relative inline-block text-left lang-container">
+                            <button class="lang-btn flex items-center justify-center gap-2">
+                                <img class="selected-flag w-7 h-7" src="images/id.png" alt="ID">
+                                <span class="iconify text-gray-500">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 24 24">
+                                        <path fill="currentColor"
+                                            d="M18.53 9.53a.75.75 0 0 0 0-1.06H5.47a.75.75 0 0 0 0 1.06l6 6a.75.75 0 0 0 1.06 0z" />
+                                    </svg>
+                                </span>
+                            </button>
+
+                            <div
+                                class="lang-menu hidden absolute left-22 bottom-0 w-40 bg-white rounded-xl shadow-xl border border-gray-200 transform scale-95 opacity-0 transition-all origin-top-right">
+                                <button data-lang="id"
+                                    class="lang-option w-full flex items-center gap-2 py-2 px-4 hover:bg-gray-100 rounded-t-xl">
+                                    <img src="images/id.png" alt="Indonesia" class="w-6 h-6">
+                                    <span class="text-sm text-gray-700">Indonesia</span>
+                                </button>
+                                <button data-lang="en"
+                                    class="lang-option w-full flex items-center gap-2 py-2 px-4 hover:bg-gray-100 rounded-b-xl">
+                                    <img src="images/uk.png" alt="English" class="w-6 h-6">
+                                    <span class="text-sm text-gray-700">English</span>
+                                </button>
+                            </div>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </div>
